<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="85dp"
              android:layout_alignParentBottom="true"
              android:background="@mipmap/luancher_below"
              android:baselineAligned="false"
              android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <RelativeLayout
            android:id="@+id/bt_dial"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <ImageView
                android:id="@+id/im_dial"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#00000000"
                android:padding="2dp"
                android:src="@mipmap/dock_dail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/im_dial"
                android:layout_centerInParent="true"
                android:text="@string/app_call"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone" >

        <RelativeLayout
            android:id="@+id/bt_message"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <ImageView
                android:id="@+id/im_message"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#00000000"
                android:padding="2dp"
                android:src="@mipmap/dock_sms" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/im_message"
                android:layout_centerInParent="true"
                android:text="@string/app_sms"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/unread_msg_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@mipmap/unread_count_bg"
                android:gravity="center"
                android:text="7"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone" >

        <RelativeLayout
            android:id="@+id/bt_more"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <ImageView
                android:id="@+id/im_more"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#00000000"
                android:padding="2dp"
                android:src="@mipmap/dock_allapp" />

            <TextView
                android:id="@+id/tv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/im_more"
                android:layout_centerInParent="true"
                android:text="@string/app_more"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <RelativeLayout
            android:id="@+id/bt_record"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <ImageView
                android:id="@+id/im_record"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#00000000"
                android:padding="2dp"
                android:src="@mipmap/luancher_q" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/im_record"
                android:layout_centerInParent="true"
                android:text="@string/app_record"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/unread_dial_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@mipmap/unread_count_bg"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <RelativeLayout
            android:id="@+id/bt_contact"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <ImageView
                android:id="@+id/im_contact"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#00000000"
                android:padding="2dp"
                android:src="@mipmap/dock_contacts" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/im_contact"
                android:layout_centerInParent="true"
                android:text="@string/app_contacts"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>